<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controller.MainActivity">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-5dp"
        android:layout_marginEnd="-5dp"
        android:layout_marginBottom="-5dp"
        android:background="@drawable/bottom_bar_curvy"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:id="@+id/imgIconHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:contentDescription="@string/iconnavhome"
            android:src="@drawable/home_grey_bottom_icon" />

        <ImageView
            android:id="@+id/imgIconSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_toEndOf="@id/imgIconHome"
            android:contentDescription="@string/iconnavsearch"
            android:src="@drawable/search_grey_bottom_icon" />

        <ImageView
            android:id="@+id/imgIconPrize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_toStartOf="@+id/imgIconProfile"
            android:contentDescription="@string/iconnavprize"
            android:src="@drawable/notification_grey_bottom_icon" />

        <ImageView
            android:id="@+id/imgIconProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:contentDescription="@string/iconnavprofile"
            android:src="@drawable/profile_grey_bottom_icon" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/backGroundForFloating"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backSemiTrans"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/containerBellMan"
        android:layout_centerHorizontal="true"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/floatBtnEvents"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="invisible">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabEvents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:src="@drawable/events_icon"
                app:backgroundTint="@color/colorGrayLight"
                app:fabSize="mini" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/events"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/floatBtnAttractions"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="invisible">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabAttractions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:src="@drawable/attarctions_icon"
                app:backgroundTint="@color/colorGrayLight"
                app:fabSize="mini" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attractions"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/containerBellMan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/floatBtnHotSpots"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="invisible">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabHotSpots"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:src="@drawable/hotspot_icon"
                app:backgroundTint="@color/colorGrayLight"
                app:fabSize="mini">

            </com.google.android.material.floatingactionbutton.FloatingActionButton>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hotspots"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imgBellMan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/icon_bell_man"
            android:src="@drawable/bellman_bottom_icon" />

        <LinearLayout
            android:id="@+id/floatBtnMap"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="invisible">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabMap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:src="@drawable/small_grey_location_pin"
                app:backgroundTint="@color/colorGrayLight"
                app:fabSize="mini" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/map"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>