<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controller.MainFragment.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/hotspot_icon"
                        android:drawablePadding="10dp"
                        android:gravity="center"
                        android:text="@string/hotspots"
                        android:textColor="@color/colorGray"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/btnHotSpotAll"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:drawableEnd="@drawable/view_all_icon"
                        android:drawablePadding="10dp"
                        android:focusable="true"
                        android:gravity="center"
                        android:text="@string/view_all"
                        android:textColor="@color/colorPrimary"
                        tools:ignore="RelativeOverlap" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerHotSpots"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="220dp"
                        android:padding="10dp" />

                    <ProgressBar
                        android:id="@+id/progressHotSpots"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true" />

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/events_icon"
                        android:drawablePadding="10dp"
                        android:gravity="center"
                        android:text="@string/events"
                        android:textColor="@color/colorGray"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/btnEventsAll"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:drawableEnd="@drawable/view_all_icon"
                        android:drawablePadding="10dp"
                        android:focusable="true"
                        android:gravity="center"
                        android:text="@string/view_all"
                        android:textColor="@color/colorPrimary"
                        tools:ignore="RelativeOverlap" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerEvents"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="220dp"
                        android:padding="10dp" />

                    <ProgressBar
                        android:id="@+id/progressEvents"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="200dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/attarctions_icon"
                        android:drawablePadding="10dp"
                        android:gravity="center"
                        android:text="@string/attractions"
                        android:textColor="@color/colorGray"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/btnAttractionsAll"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:drawableEnd="@drawable/view_all_icon"
                        android:drawablePadding="10dp"
                        android:focusable="true"
                        android:gravity="center"
                        android:text="@string/view_all"
                        android:textColor="@color/colorPrimary"
                        tools:ignore="RelativeOverlap" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerAttractions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="220dp"
                        android:padding="10dp" />

                    <ProgressBar
                        android:id="@+id/progressAttractions"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true" />

                </RelativeLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_header"
            android:scaleType="fitXY"
            android:src="@drawable/big_header" />

        <LinearLayout
            android:id="@+id/topBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="bottom"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:contentDescription="@string/white_image_location"
                android:src="@drawable/location_white" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/you_are_in"
                    android:textColor="#fff"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txtLocations"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Misr Al Gadida - Egypt"
                    android:textColor="#fff"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/btnNotification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:contentDescription="@string/notifications_activity_button"
                    android:focusable="true"
                    app:srcCompat="@drawable/ic_notifications_white" />

                <ImageView
                    android:id="@+id/btnCalender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:contentDescription="@string/calender_activity_button"
                    android:focusable="true"
                    app:srcCompat="@drawable/ic_calender_white" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/topBar"
            android:layout_marginStart="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/shape_corner_white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp">

            <EditText
                android:id="@+id/etSearch"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:drawableStart="@drawable/location_search_icon"
                android:drawablePadding="10dp"
                tools:ignore="Autofill,LabelFor,TextFields" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:background="#000" />

            <ImageView
                android:id="@+id/btnFilterSearch"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/filter_data_button"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:src="@drawable/filter_inside_search" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>